cilium-networkpolicies/kasten-networkpolicies/kasten-metering-service.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: kasten-metering-service
  namespace: kasten-io
spec:
  endpointSelector:
    matchLabels:
      component: metering
  ingress:
    - fromEndpoints:
        - matchLabels: {}
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
