cilium-networkpolicies/kasten-networkpolicies/kasten-minio-connection-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kasten-minio-connection-egress
  namespace: kasten-io
spec:
  endpointSelector:
    matchLabels:
      k8s:io.kubernetes.pod.namespace: kasten-io
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: tailscale
            tailscale.com/parent-resource: expose-apollo
      toPorts:
        - ports:
            - port: "9090"
