cilium-networkpolicies/kasten-networkpolicies/kasten-minio-connection-ingress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kasten-minio-connection-ingress
  namespace: tailscale
spec:
  endpointSelector:
    matchLabels:
      tailscale.com/parent-resource: expose-apollo
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kasten-io
      toPorts:
        - ports:
            - port: "9090"
