cilium-networkpolicies/kasten-networkpolicies/namespace-isolation-k10.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: namespace-isolation-k10
  namespace: kasten-io
spec:
  endpointSelector:
    matchLabels: {}
  ingress:
  - fromEndpoints:
    - matchLabels: {}
  egress:
  - toEndpoints:
    - matchLabels: {}
  - toEntities:
    - host  # Allow to host (includes API server)
    toPorts:
    - ports:
      - port: "6443"
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s:k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
