cilium-networkpolicies/kasten-networkpolicies/netpol-kasten-k10-to-host.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: netpol-kasten-common
  namespace: kasten-io
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: k10
      app.kubernetes.io/name: k10
  egress:
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
