cilium-networkpolicies/kasten-networkpolicies/ui-ingress-k10.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: ui-ingress-k10
  namespace: kasten-io
spec:
  endpointSelector:
    matchLabels: 
      app.kubernetes.io/name: longhorn
  ingress:
  - fromEndpoints:
    - matchLabels: {}
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: traefik
        app.kubernetes.io/name: traefik
    toPorts:
    - ports:
      - port: "8000"
        protocol: TCP
  egress:
  - toEndpoints:
    - matchLabels: {}
